recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:5: error: value :: is not a member of Int
var rep = head::tail
              ^